@@ -20,11 +20,14 @@ nobase_include_HEADERS = \
         cxxtools/md5stream.h \
         cxxtools/multifstream.h \
         cxxtools/net.h \
+        cxxtools/noncopyable.h \
         cxxtools/pipe.h \
         cxxtools/pipestream.h \
         cxxtools/pollclass.h \
         cxxtools/pool.h \
         cxxtools/query_params.h \
+        cxxtools/refcounted.h \
+        cxxtools/smartptr.h \
         cxxtools/sudo.h \
         cxxtools/streamcounter.h \
         cxxtools/syserror.h \
